Implements a simple counter

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #61dafb;
+  color: white;
+  font-size: 36px;
+  text-align: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  width: 80px;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: coral;
+  border: 1px dotted yellow;
+  color: black;
+  font-size: 36px;
+
+
 }
